# AnyCoder

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
anycoder/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  llm.py  session.py
anycoder/prompts/: system.py
anycoder/tools/: __init__.py  base.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  write_file.py
tests/: test_core.py  test_session.py
