[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anycoder"
version = "0.1.0"
description = "AI coding agent CLI that works with any LLM - DeepSeek, Qwen, GPT, Claude, Gemini, local models, you name it"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yufeng He", email = "40085740+he-yufeng@users.noreply.github.com" },
]
keywords = ["ai", "coding", "agent", "llm", "cli", "deepseek", "qwen", "claude", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "litellm>=1.40.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
anycoder = "anycoder.cli:main"

[project.urls]
Homepage = "https://github.com/he-yufeng/AnyCoder"
Repository = "https://github.com/he-yufeng/AnyCoder"
Issues = "https://github.com/he-yufeng/AnyCoder/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
